<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shoes_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoes_name_text" />

        <TextView
            android:id="@+id/shoes_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoes_size_text" />

        <TextView
            android:id="@+id/shoes_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoes_company_text" />

        <TextView
            android:id="@+id/shoes_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoes_description_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</ScrollView>