<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        tools:context=".InstructionFragment"
        tools:ignore="RtlHardcoded">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/instruction"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="32dp"
            android:text="@string/instruction_description"
            android:textSize="18sp" />

        <Button
            android:id="@+id/listingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="32dp"
            android:text="@string/shoe_listing" />


    </FrameLayout>

</layout>
